--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <!--The content below is only a placeholder and can be replaced.-->
+<h1>Stefanny Toro - Mercado Libre</h1>
 <app-products></app-products>
 <router-outlet></router-outlet>
