--- a/src/app/products/products.component.css
+++ b/src/app/products/products.component.css
@@ -1,8 +1,9 @@
-ul {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-}
-li {
+div {
   text-align: center;
+}
+.container {
+  vertical-align: middle;
+  max-width: 1300px;
+  text-align: center;
+  align-content: center
 }
