--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,9 +1,20 @@
-h1 {
-    color: #000;
-    font-family: "Raleway", sans-serif;
-    font-size: 30px;
-    font-weight: 500;
-    line-height: 72px;
-    margin: 0 0 24px;
-    text-align: left;
+h6 {
+  color: #f2f2f2;
+  background: #333; 
+  font-size: 30px; 
+  line-height: 70px; 
+  font-weight: 300; 
+  margin: 0 5px 24px; 
+  float: center; 
+  padding: 10px; 
+  margin: 0 5px 24px; 
+  font-family: 'Libre Baskerville', serif;
   }
+  .container {
+    vertical-align: middle;
+    max-width: 1300px;
+    text-align: center;
+    align-content: center
+  }
+
+  
